--- a/index.html
+++ b/index.html
@@ -575,7 +575,7 @@ body{
 }
 
 .tile.play::before{content:""; position:absolute; inset:0; background:linear-gradient(20deg, rgba(255,255,255,.35), transparent 35%, transparent 65%, rgba(255,255,255,.18)); mix-blend-mode:screen; opacity:.35; pointer-events:none}
-.tile.level{background:linear-gradient(180deg,#16181b,#0f1012); color:#c7ced6}
+.tile.level{background:linear-gradient(180deg,#16181b,#0f1012); color:#c7ced6 padding-inline: 18px; }
 /* ===== Shop Overlay ===== */
 .shop-overlay {
   position: fixed; inset: 0;
