--- a/index.html
+++ b/index.html
@@ -5834,6 +5834,8 @@ document.addEventListener('DOMContentLoaded', bootstrap);
 
 /* expose */
 window.closeOverlay = closeOverlay;
+  window.NEON_DATA_API_ENDPOINT = "https://<project-id>.neon.tech/sql";
+  window.NEON_DATA_API_KEY = "<short-lived JWT or key>";
 </script>
 </body>
 </html>
